Add GrammarBenchmark