@@ -1,11 +1,73 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>org.eclipse.tm4e.core</artifactId>
-  <packaging>eclipse-plugin</packaging>
-  <version>0.4.4-SNAPSHOT</version>
-  <parent>
-    <groupId>org.eclipse</groupId>
-    <artifactId>org.eclipse.tm4e</artifactId>
-    <version>0.3.2-SNAPSHOT</version>
-  </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>org.eclipse.tm4e.core</artifactId>
+	<packaging>eclipse-plugin</packaging>
+	<version>0.4.4-SNAPSHOT</version>
+	<parent>
+		<groupId>org.eclipse</groupId>
+		<artifactId>org.eclipse.tm4e</artifactId>
+		<version>0.3.2-SNAPSHOT</version>
+	</parent>
+
+	<profiles>
+		<profile>
+			<id>benchmark</id>
+			<activation>
+				<property>
+					<name>benchmarkClass</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<!-- https://github.com/officefloor/OfficeFloor/tree/master/officefloor/maven/tycho-shade-maven-plugin -->
+						<groupId>net.officefloor.maven</groupId>
+						<artifactId>tycho-shade-maven-plugin</artifactId>
+						<version>3.40.0</version>
+						<executions>
+							<execution>
+								<id>shade</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>3.0.0</version>
+						<executions>
+							<execution>
+								<phase>integration-test</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>java</executable>
+									<arguments>
+										<!-- using G1 + large heap to prevent auto GC during benchmark run -->
+										<argument>-Xms2048M</argument>
+										<argument>-Xmx2048M</argument>
+										<argument>-XX:+UseG1GC</argument>
+
+										<!-- logging GC activity via STDERR -->
+										<argument>-Xlog:gc:stderr</argument>
+
+										<argument>-Dfile.encoding=UTF-8</argument>
+
+										<argument>-cp</argument>
+										<argument>${project.build.directory}/${project.artifactId}-${project.version}-tychoshade.jar;${project.build.directory}/test-classes</argument>
+										<argument>${benchmarkClass}</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
